# DAA

./: README.md  pyproject.toml  requirements.txt
configs/: base.yaml  data_manifest.example.yaml  data_manifest.yaml
configs/splits/: stratified_splits.json
data/interim/: smart_grid_master.csv  smart_grid_master.parquet
data/processed/: smart_grid_augmented.parquet  smart_grid_clean.parquet
data/processed/pca/: variance.csv  (+4 more)
data/raw/: smart_grid_signals.csv
docs/: TODO.md  data_sources.md  smart_grid_schema.md
models/autoencoder_baseline/: autoencoder.keras  history.json  metadata.json  reconstruction_errors.csv
models/autoencoder_search_runs/: autoencoder_search_summary.csv
models/cnn_classifier/: classification_report.json  cnn_fault_classifier.keras  confusion_matrix.json  history.json  label_map.json  metrics.json  predictions.csv
notebooks/eda/: 01_data_overview.ipynb  02_detector_report.ipynb  02_visualizations.ipynb  03_full_report.ipynb
reports/autoencoder/: autoencoder_feature_errors.csv  autoencoder_metrics.json  autoencoder_pr_auc.json  autoencoder_predictions.csv  autoencoder_roc.csv  autoencoder_threshold_summary.csv  autoencoder_time_feature_heatmap.csv
reports/detector_compare/: detector_comparison.csv
reports/manifold/: tsne_embedding.csv  umap_embedding.csv
reports/pca_detectors/: isolation_forest_predictions.csv  one_class_svm_metrics.json  one_class_svm_predictions.csv
reports/stress_tests/: stress_test_summary.csv
reports/zscore/: zscore_metrics.json
reports/zscore_benchmark/: zscore_benchmark.json  zscore_metrics.json
(+188 files in other folders)
